# termtube

./: .gitignore  Cargo.toml  README.md  release-appimages.sh
.github/prompts/: plan-termTube.prompt.md
config/: default.toml
packaging/: Dockerfile.arm64  build-appimage.sh  build-arm64-docker.sh  build-arm64-host.sh
packaging/TermTube-aarch64.AppDir/: .DirIcon  termtube.desktop
packaging/TermTube-aarch64.AppDir/usr/share/applications/: termtube.desktop
packaging/TermTube-x86_64.AppDir/: AppRun
src/: app.rs  app_search_test.rs  main.rs  search.rs  search_test.rs
src/audio/: engine.rs  mod.rs  preloader.rs  queue.rs
src/config/: cookies.rs  mod.rs  playlist.rs  settings.rs
src/input/: handler.rs
src/playlist/: favorites.rs  manager.rs  mod.rs  models.rs
src/sync/: fetcher.rs
src/ui/: controls.rs  layout.rs  mod.rs  now_playing.rs  playlist_view.rs  queue_view.rs  search_view.rs  theme.rs  visualizer_view.rs
src/visualizer/: spectrum.rs
