[package]
name = "termtube"
version = "0.1.1"
edition = "2021"
description = "A TUI YouTube music player with visualizer"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
shellexpand = "3"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
